# C_programming_practice

./: CMakeLists.txt
examples/: funcction_pointer.c
src/: function_pointer.h
src/function_pointer/: function_pointer.c  function_pointer_main.c
src/parallel_computation/: main.c  parallel_computation.c  parallel_computation.h  pi_parallel_computation.c  pi_parallel_computation.h
